@@ -2,7 +2,6 @@ package edu.leicester.scrabble.controller;
 
 import edu.leicester.scrabble.model.*;
 import edu.leicester.scrabble.util.ScrabbleConstants;
-import edu.leicester.scrabble.util.WordScoreCalculator;
 import javafx.application.Platform;
 import javafx.scene.control.Alert;
 
@@ -11,12 +10,13 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.TreeMap;
 import java.util.concurrent.*;
 
 public class GameController {
 
     private final Game game;
-    private final List<edu.leicester.scrabble.model.ComputerPlayer> computerPlayers;
+    private final List<ComputerPlayer> computerPlayers;
     private final ExecutorService executor;
 
     private List<Tile> selectedTiles;
@@ -41,10 +41,9 @@ public class GameController {
         this.selectedPositions = new ArrayList<>();
         this.gameInProgress = false;
 
-        // Create computer players for any AI players
         for (Player player : game.getPlayers()) {
             if (player.isComputer()) {
-                computerPlayers.add(new edu.leicester.scrabble.model.ComputerPlayer(player, 2)); // Medium difficulty
+                computerPlayers.add(new ComputerPlayer(player, 2)); // Medium difficulty
             }
         }
     }
@@ -52,11 +51,9 @@ public class GameController {
     public void startGame() {
         game.start();
         gameInProgress = true;
-
         updateBoard();
         updateRack();
         updateCurrentPlayer();
-
         makeComputerMoveIfNeeded();
     }
 
@@ -70,13 +67,11 @@ public class GameController {
         }
 
         boolean success = game.executeMove(move);
-
         if (success) {
             System.out.println("Move executed: " + move.getType() + " by " + move.getPlayer().getName());
 
             selectedTiles.clear();
             selectedPositions.clear();
-
             temporaryPlacements.clear();
             temporaryIndices.clear();
 
@@ -99,44 +94,34 @@ public class GameController {
             if (move.getPlayer().isComputer()) {
                 showComputerMoveInfo(move);
             }
-
             makeComputerMoveIfNeeded();
         } else {
             System.out.println("Move failed to execute");
         }
-
         return success;
     }
 
     private void showComputerMoveInfo(Move move) {
         String moveInfo = "";
-
         switch (move.getType()) {
             case PLACE:
-                moveInfo = "Computer placed tiles to form: " + String.join(", ", move.getFormedWords());
-                moveInfo += "\nScore: " + move.getScore() + " points";
+                moveInfo = "Computer placed tiles to form: " + String.join(", ", move.getFormedWords())
+                        + "\nScore: " + move.getScore() + " points";
                 break;
-
             case EXCHANGE:
                 moveInfo = "Computer exchanged " + move.getTiles().size() + " tiles";
                 break;
-
             case PASS:
                 moveInfo = "Computer passed its turn";
                 break;
         }
-
         String finalMoveInfo = moveInfo;
         Platform.runLater(() -> {
             try {
-                javafx.scene.control.Alert alert = new javafx.scene.control.Alert(
-                        javafx.scene.control.Alert.AlertType.INFORMATION
-                );
+                Alert alert = new Alert(Alert.AlertType.INFORMATION);
                 alert.setTitle("Computer's Move");
                 alert.setHeaderText("Computer has played");
                 alert.setContentText(finalMoveInfo);
-
-                // Show the dialog and wait for it to be closed
                 alert.showAndWait();
             } catch (Exception e) {
                 System.err.println("Error showing computer move info: " + e.getMessage());
@@ -147,17 +132,13 @@ public class GameController {
 
     private void makeComputerMoveIfNeeded() {
         Player currentPlayer = game.getCurrentPlayer();
-
         if (currentPlayer.isComputer() && !computerMoveInProgress) {
             System.out.println("Computer's turn - preparing move");
             computerMoveInProgress = true;
-
-            // Show that it's the computer's turn in the UI
             updateCurrentPlayer();
 
-            // Find the computer player
-            edu.leicester.scrabble.model.ComputerPlayer computerPlayer = null;
-            for (edu.leicester.scrabble.model.ComputerPlayer cp : computerPlayers) {
+            ComputerPlayer computerPlayer = null;
+            for (ComputerPlayer cp : computerPlayers) {
                 if (cp.getPlayer() == currentPlayer) {
                     computerPlayer = cp;
                     break;
@@ -166,17 +147,15 @@ public class GameController {
 
             if (computerPlayer == null) {
                 System.err.println("Computer player not found");
-                // If we can't find a computer player, just pass
                 Move passMove = Move.createPassMove(currentPlayer);
                 makeMove(passMove);
                 computerMoveInProgress = false;
                 return;
             }
 
-            // Create a final reference for the task
-            final edu.leicester.scrabble.model.ComputerPlayer finalComputerPlayer = computerPlayer;
+            final ComputerPlayer finalComputerPlayer = computerPlayer;
 
-            // Create an emergency timeout that will force a pass move after 5 seconds
+            // Emergency timeout: force a pass move after 5 seconds
             ScheduledExecutorService emergencyTimer = Executors.newSingleThreadScheduledExecutor();
             ScheduledFuture<?> emergencyTimeout = emergencyTimer.schedule(() -> {
                 if (computerMoveInProgress) {
@@ -189,27 +168,19 @@ public class GameController {
                 }
             }, 5, TimeUnit.SECONDS);
 
-            // Execute the computer's move generation on a separate thread
+            // Execute computer move generation on a separate thread
             executor.submit(() -> {
                 try {
-                    // Generate a move using the enhanced AI logic
                     Move computerMove = finalComputerPlayer.generateMove(game);
-
-                    // Apply a small delay for visual feedback
                     Thread.sleep(1000);
-
-                    // Cancel the emergency timer since we're executing normally
                     emergencyTimeout.cancel(false);
                     emergencyTimer.shutdownNow();
-
-                    // Execute the move on the JavaFX application thread
                     Platform.runLater(() -> {
                         try {
                             makeMove(computerMove);
                         } catch (Exception e) {
                             System.err.println("Error executing computer move: " + e.getMessage());
                             e.printStackTrace();
-                            // Ensure we make a move even on exception
                             Move passMove = Move.createPassMove(currentPlayer);
                             makeMove(passMove);
                         } finally {
@@ -219,15 +190,10 @@ public class GameController {
                 } catch (Exception e) {
                     System.err.println("Error in computer move: " + e.getMessage());
                     e.printStackTrace();
-
-                    // Make sure we handle any exceptions and still make a move
                     Platform.runLater(() -> {
                         try {
-                            // Cancel the emergency timer
                             emergencyTimeout.cancel(false);
                             emergencyTimer.shutdownNow();
-
-                            // Default to a pass move on error
                             Move passMove = Move.createPassMove(currentPlayer);
                             makeMove(passMove);
                         } finally {
@@ -245,7 +211,6 @@ public class GameController {
         if (!gameInProgress) {
             return false;
         }
-
         Move passMove = Move.createPassMove(game.getCurrentPlayer());
         return makeMove(passMove);
     }
@@ -256,37 +221,31 @@ public class GameController {
                 System.out.println("[Exchange] Game not in progress");
                 return false;
             }
-
             if (selectedTiles.isEmpty()) {
                 System.out.println("[Exchange] No tiles selected");
                 showError("No tiles selected. Please select tiles from your rack to exchange.");
                 return false;
             }
-
             if (game.getTileBag().getTileCount() < 1) {
                 System.out.println("[Exchange] Not enough tiles in bag");
                 showError("Not enough tiles in the bag for exchange.");
                 return false;
             }
-
             if (!temporaryPlacements.isEmpty()) {
                 System.out.println("[Exchange] Temporary placements exist");
                 showError("Please cancel your current placement before exchanging tiles.");
                 return false;
             }
-
             System.out.println("[Exchange] Exchanging " + selectedTiles.size() + " tiles");
 
             StringBuilder exchangeLog = new StringBuilder("Selected tiles: ");
             for (Tile t : selectedTiles) {
                 exchangeLog.append(t.getLetter()).append(" ");
             }
-            System.out.println(exchangeLog.toString());
+            System.out.println(exchangeLog);
 
             List<Tile> tilesToExchange = new ArrayList<>(selectedTiles);
-
             Move exchangeMove = Move.createExchangeMove(game.getCurrentPlayer(), tilesToExchange);
-
             Player currentPlayer = game.getCurrentPlayer();
             boolean currentPlayerIsHuman = !currentPlayer.isComputer();
 
@@ -294,16 +253,11 @@ public class GameController {
             selectedPositions.clear();
 
             boolean success = game.executeMove(exchangeMove);
-
             if (success) {
                 System.out.println("[Exchange] Exchange successful");
-
-                // Update the UI first
                 updateBoard();
                 updateRack();
                 updateCurrentPlayer();
-
-                // Show confirmation and handle the computer's turn
                 if (currentPlayerIsHuman) {
                     showExchangeConfirmation();
                 }
@@ -311,7 +265,6 @@ public class GameController {
                 System.out.println("[Exchange] Exchange failed");
                 showError("Failed to exchange tiles. Please try again.");
             }
-
             return success;
         } catch (Exception e) {
             System.err.println("[Exchange] Error in exchangeTiles: " + e.getMessage());
@@ -337,12 +290,9 @@ public class GameController {
                 System.out.println("[Exchange] Dialog closed, checking if computer's turn");
 
                 Player currentPlayer = game.getCurrentPlayer();
-
                 if (currentPlayer.isComputer()) {
                     System.out.println("[Exchange] Current player is computer: " + currentPlayer.getName());
-
                     updateCurrentPlayer();
-
                     new Thread(() -> {
                         try {
                             Thread.sleep(300);
@@ -380,34 +330,25 @@ public class GameController {
             if (row < 0 || row >= Board.SIZE || col < 0 || col >= Board.SIZE) {
                 return false;
             }
-
             Player currentPlayer = game.getCurrentPlayer();
             Rack rack = currentPlayer.getRack();
-
             if (rackIndex < 0 || rackIndex >= rack.size()) {
                 return false;
             }
-
             if (game.getBoard().getSquare(row, col).hasTile() || hasTemporaryTileAt(row, col)) {
                 return false;
             }
-
             Tile tile = rack.getTile(rackIndex);
-
             if (temporaryIndices.contains(rackIndex)) {
                 return false;
             }
-
             if (!isValidTemporaryPlacement(row, col)) {
                 return false;
             }
-
             temporaryPlacements.put(new Point(row, col), tile);
             temporaryIndices.add(rackIndex);
-
             updateBoard();
             updateRack();
-
             return true;
         } catch (Exception e) {
             System.err.println("Error in placeTileTemporarily: " + e.getMessage());
@@ -426,100 +367,137 @@ public class GameController {
 
     public boolean isValidTemporaryPlacement(int row, int col) {
         Board board = game.getBoard();
-
-        // Check if the position is already occupied (board tile or temporary placement)
         if (board.getSquare(row, col).hasTile() || hasTemporaryTileAt(row, col)) {
             return false;
         }
-
-        // If board is empty and no temporary placements yet, require center square
+        // For the first move, require the center square.
         if (board.isEmpty() && temporaryPlacements.isEmpty()) {
             return row == ScrabbleConstants.CENTER_SQUARE && col == ScrabbleConstants.CENTER_SQUARE;
         }
-
-        // If there are already temporary placements, check if this new placement maintains a straight line
         if (!temporaryPlacements.isEmpty()) {
-            // Get all current temporary placement points
             List<Point> placementPoints = new ArrayList<>(temporaryPlacements.keySet());
-
-            // If only one tile has been placed, we need to determine direction
             if (placementPoints.size() == 1) {
-                Point existingPoint = placementPoints.get(0);
-
-                // Check if the new placement is in the same row or column as the existing one
+                Point existingPoint = placementPoints.getFirst();
                 return (row == existingPoint.x || col == existingPoint.y);
             }
-
-            // More than one tile - determine direction
             Move.Direction direction = determineDirection();
-
-            // If we can't determine a direction (tiles not in a line), placement is invalid
             if (direction == null) {
                 return false;
             }
-
-            // Check if the new placement follows the direction
             if (direction == Move.Direction.HORIZONTAL) {
-                // All placements must be in the same row
                 for (Point p : placementPoints) {
                     if (p.x != row) {
                         return false;
                     }
                 }
-
-                // *** THE KEY FIX: Check if this placement is adjacent to any temporary placement ***
+                int minCol = Integer.MAX_VALUE;
+                int maxCol = Integer.MIN_VALUE;
                 for (Point p : placementPoints) {
-                    // If same row and adjacent column, it's valid
-                    if (p.x == row && (p.y == col - 1 || p.y == col + 1)) {
-                        return true;
-                    }
+                    minCol = Math.min(minCol, p.y);
+                    maxCol = Math.max(maxCol, p.y);
                 }
-
-                // Or if it's adjacent to an existing board tile in the same row
-                return board.hasAdjacentTile(row, col);
+                if (col >= minCol - 1 && col <= maxCol + 1) {
+                    return true;
+                }
+                return (col > 0 && board.getSquare(row, col - 1).hasTile()) ||
+                        (col < Board.SIZE - 1 && board.getSquare(row, col + 1).hasTile());
             } else { // VERTICAL
-                // All placements must be in the same column
                 for (Point p : placementPoints) {
                     if (p.y != col) {
                         return false;
                     }
                 }
-
-                // *** THE KEY FIX: Check if this placement is adjacent to any temporary placement ***
+                int minRow = Integer.MAX_VALUE;
+                int maxRow = Integer.MIN_VALUE;
                 for (Point p : placementPoints) {
-                    // If same column and adjacent row, it's valid
-                    if (p.y == col && (p.x == row - 1 || p.x == row + 1)) {
-                        return true;
-                    }
+                    minRow = Math.min(minRow, p.x);
+                    maxRow = Math.max(maxRow, p.x);
                 }
-
-                // Or if it's adjacent to an existing board tile in the same column
-                return board.hasAdjacentTile(row, col);
+                if (row >= minRow - 1 && row <= maxRow + 1) {
+                    return true;
+                }
+                return (row > 0 && board.getSquare(row - 1, col).hasTile()) ||
+                        (row < Board.SIZE - 1 && board.getSquare(row + 1, col).hasTile());
             }
         }
-
-        // For the first tile placement in a turn, must be adjacent to at least one existing tile
-        return board.hasAdjacentTile(row, col);
+        boolean hasHorizontalAdjacent = (col > 0 && board.getSquare(row, col - 1).hasTile()) ||
+                (col < Board.SIZE - 1 && board.getSquare(row, col + 1).hasTile());
+        boolean hasVerticalAdjacent = (row > 0 && board.getSquare(row - 1, col).hasTile()) ||
+                (row < Board.SIZE - 1 && board.getSquare(row + 1, col).hasTile());
+        boolean hasDiagonalAdjacent = (row > 0 && col > 0 && board.getSquare(row - 1, col - 1).hasTile()) ||
+                (row > 0 && col < Board.SIZE - 1 && board.getSquare(row - 1, col + 1).hasTile()) ||
+                (row < Board.SIZE - 1 && col > 0 && board.getSquare(row + 1, col - 1).hasTile()) ||
+                (row < Board.SIZE - 1 && col < Board.SIZE - 1 && board.getSquare(row + 1, col + 1).hasTile());
+        boolean extendsHorizontalWord = (col > 0 && board.getSquare(row, col - 1).hasTile()) ||
+                (col < Board.SIZE - 1 && board.getSquare(row, col + 1).hasTile());
+        boolean extendsVerticalWord = (row > 0 && board.getSquare(row - 1, col).hasTile()) ||
+                (row < Board.SIZE - 1 && board.getSquare(row + 1, col).hasTile());
+        return hasHorizontalAdjacent || hasVerticalAdjacent || hasDiagonalAdjacent ||
+                extendsHorizontalWord || extendsVerticalWord;
     }
 
     public Move.Direction determineDirection() {
-        // If there are less than 2 temporary tiles, we can't determine direction
-        if (temporaryPlacements.size() < 2) {
+        if (temporaryPlacements.size() <= 1) {
+            if (temporaryPlacements.size() == 1) {
+                Point p = temporaryPlacements.keySet().iterator().next();
+                int row = p.x;
+                int col = p.y;
+                Board board = game.getBoard();
+                boolean hasHorizontalAdjacent = (col > 0 && board.getSquare(row, col - 1).hasTile()) ||
+                        (col < Board.SIZE - 1 && board.getSquare(row, col + 1).hasTile());
+                boolean hasVerticalAdjacent = (row > 0 && board.getSquare(row - 1, col).hasTile()) ||
+                        (row < Board.SIZE - 1 && board.getSquare(row + 1, col).hasTile());
+                if (hasHorizontalAdjacent && !hasVerticalAdjacent) {
+                    return Move.Direction.HORIZONTAL;
+                }
+                if (hasVerticalAdjacent && !hasHorizontalAdjacent) {
+                    return Move.Direction.VERTICAL;
+                }
+                List<Square> horizontalWord = new ArrayList<>();
+                List<Square> verticalWord = new ArrayList<>();
+                int left = col;
+                while (left > 0 && board.getSquare(row, left - 1).hasTile()) {
+                    left--;
+                }
+                int right = col;
+                while (right < Board.SIZE - 1 && board.getSquare(row, right + 1).hasTile()) {
+                    right++;
+                }
+                if (right > left) {
+                    for (int c = left; c <= right; c++) {
+                        if (board.getSquare(row, c).hasTile()) {
+                            horizontalWord.add(board.getSquare(row, c));
+                        }
+                    }
+                }
+                int top = row;
+                while (top > 0 && board.getSquare(top - 1, col).hasTile()) {
+                    top--;
+                }
+                int bottom = row;
+                while (bottom < Board.SIZE - 1 && board.getSquare(bottom + 1, col).hasTile()) {
+                    bottom++;
+                }
+                if (bottom > top) {
+                    for (int r = top; r <= bottom; r++) {
+                        if (board.getSquare(r, col).hasTile()) {
+                            verticalWord.add(board.getSquare(r, col));
+                        }
+                    }
+                }
+                if (horizontalWord.size() > verticalWord.size()) {
+                    return Move.Direction.HORIZONTAL;
+                } else if (verticalWord.size() > horizontalWord.size()) {
+                    return Move.Direction.VERTICAL;
+                }
+            }
             return null;
         }
-
-        // Get all points where tiles have been temporarily placed
         List<Point> points = new ArrayList<>(temporaryPlacements.keySet());
-
-        // Check if all tiles are in the same row
         boolean sameRow = true;
-        int firstRow = points.get(0).x;
-
-        // Check if all tiles are in the same column
+        int firstRow = points.getFirst().x;
         boolean sameColumn = true;
-        int firstCol = points.get(0).y;
-
-        // Check each point
+        int firstCol = points.getFirst().y;
         for (Point p : points) {
             if (p.x != firstRow) {
                 sameRow = false;
@@ -528,123 +506,13 @@ public class GameController {
                 sameColumn = false;
             }
         }
-
-        // If all in same row, it's horizontal
         if (sameRow) {
             return Move.Direction.HORIZONTAL;
         }
-
-        // If all in same column, it's vertical
         if (sameColumn) {
             return Move.Direction.VERTICAL;
         }
-
-        // If neither, the placement is invalid
         return null;
-    }
-
-    public boolean commitPlacement() {
-        if (temporaryPlacements.isEmpty()) {
-            return false;
-        }
-
-        // Determine the direction of the placement
-        Move.Direction direction = determineDirection();
-        if (direction == null) {
-            // If only one tile placed, default to horizontal
-            if (temporaryPlacements.size() == 1) {
-                direction = Move.Direction.HORIZONTAL;
-            } else {
-                return false; // Invalid placement
-            }
-        }
-
-        // Find the starting position
-        int startRow = Integer.MAX_VALUE;
-        int startCol = Integer.MAX_VALUE;
-        for (Point p : temporaryPlacements.keySet()) {
-            startRow = Math.min(startRow, p.x);
-            startCol = Math.min(startCol, p.y);
-        }
-
-        // Check if the placement includes the center square for the first move
-        if (game.getBoard().isEmpty()) {
-            boolean includesCenter = false;
-            for (Point p : temporaryPlacements.keySet()) {
-                if (p.x == ScrabbleConstants.CENTER_SQUARE && p.y == ScrabbleConstants.CENTER_SQUARE) {
-                    includesCenter = true;
-                    break;
-                }
-            }
-            if (!includesCenter) {
-                return false; // First move must include center square
-            }
-        }
-
-        // Create a place move
-        Move placeMove = Move.createPlaceMove(game.getCurrentPlayer(), startRow, startCol, direction);
-
-        // Add the tiles to the move in the correct order
-        List<Tile> tilesToPlace = new ArrayList<>();
-
-        if (direction == Move.Direction.HORIZONTAL) {
-            for (int c = startCol; c < Board.SIZE; c++) {
-                Point p = new Point(startRow, c);
-                if (temporaryPlacements.containsKey(p)) {
-                    tilesToPlace.add(temporaryPlacements.get(p));
-                } else if (game.getBoard().getSquare(startRow, c).hasTile()) {
-                    // Skip existing tiles on the board
-                    continue;
-                } else {
-                    // End of the word
-                    break;
-                }
-            }
-        } else { // VERTICAL
-            for (int r = startRow; r < Board.SIZE; r++) {
-                Point p = new Point(r, startCol);
-                if (temporaryPlacements.containsKey(p)) {
-                    tilesToPlace.add(temporaryPlacements.get(p));
-                } else if (game.getBoard().getSquare(r, startCol).hasTile()) {
-                    // Skip existing tiles on the board
-                    continue;
-                } else {
-                    // End of the word
-                    break;
-                }
-            }
-        }
-
-        placeMove.addTiles(tilesToPlace);
-
-        // Calculate the words formed and their scores
-        List<String> formedWords = calculateFormedWords(placeMove);
-        if (formedWords.isEmpty()) {
-            return false; // No valid words formed
-        }
-
-        // Set the formed words
-        placeMove.setFormedWords(formedWords);
-
-        // Calculate score
-        int score = calculateMoveScore(placeMove);
-        placeMove.setScore(score);
-
-        // Validate the move to check if all words formed are valid
-        if (!validateWords(placeMove)) {
-            return false; // Invalid words formed
-        }
-
-        // Apply the move
-        boolean success = makeMove(placeMove);
-
-        if (success) {
-            // Clear temporary state
-            temporaryPlacements.clear();
-            temporaryIndices.clear();
-        }
-
-        return success;
     }
 
     private List<String> calculateFormedWords(Move move) {
@@ -653,140 +521,7 @@ public class GameController {
         int row = move.getStartRow();
         int col = move.getStartCol();
 
-        // Create a temporary board to place the tiles
         Board tempBoard = new Board();
-
-        // Copy existing tiles from the game board
-        for (int r = 0; r < Board.SIZE; r++) {
-            for (int c = 0; c < Board.SIZE; c++) {
-                Square square = board.getSquare(r, c);
-                if (square.hasTile()) {
-                    tempBoard.placeTile(r, c, square.getTile());
-                }
-            }
-        }
-
-        // Place the new tiles
-        int currentRow = row;
-        int currentCol = col;
-
-        for (Tile tile : move.getTiles()) {
-            // Skip squares that already have tiles
-            while (tempBoard.getSquare(currentRow, currentCol).hasTile()) {
-                if (move.getDirection() == Move.Direction.HORIZONTAL) {
-                    currentCol++;
-                } else {
-                    currentRow++;
-                }
-
-                // Check bounds
-                if (currentRow >= Board.SIZE || currentCol >= Board.SIZE) {
-                    break;
-                }
-            }
-
-            // Place the tile
-            if (currentRow < Board.SIZE && currentCol < Board.SIZE) {
-                tempBoard.placeTile(currentRow, currentCol, tile);
-
-                // Move to next position
-                if (move.getDirection() == Move.Direction.HORIZONTAL) {
-                    currentCol++;
-                } else {
-                    currentRow++;
-                }
-            }
-        }
-
-        // Find the main word
-        List<Square> mainWord;
-        if (move.getDirection() == Move.Direction.HORIZONTAL) {
-            mainWord = tempBoard.getHorizontalWord(row, col);
-        } else {
-            mainWord = tempBoard.getVerticalWord(row, col);
-        }
-
-        if (!mainWord.isEmpty()) {
-            formedWords.add(Board.getWordString(mainWord));
-        }
-
-        // Find any crossing words
-        currentRow = row;
-        currentCol = col;
-
-        for (Tile tile : move.getTiles()) {
-            // Skip squares that already have tiles on the original board
-            while (board.getSquare(currentRow, currentCol).hasTile()) {
-                if (move.getDirection() == Move.Direction.HORIZONTAL) {
-                    currentCol++;
-                } else {
-                    currentRow++;
-                }
-
-                // Check bounds
-                if (currentRow >= Board.SIZE || currentCol >= Board.SIZE) {
-                    break;
-                }
-            }
-
-            // Check for crossing word
-            if (currentRow < Board.SIZE && currentCol < Board.SIZE) {
-                List<Square> crossingWord;
-
-                if (move.getDirection() == Move.Direction.HORIZONTAL) {
-                    crossingWord = tempBoard.getVerticalWord(currentRow, currentCol);
-                } else {
-                    crossingWord = tempBoard.getHorizontalWord(currentRow, currentCol);
-                }
-
-                if (crossingWord.size() >= 2) { // Must be at least 2 letters
-                    formedWords.add(Board.getWordString(crossingWord));
-                }
-
-                // Move to next position
-                if (move.getDirection() == Move.Direction.HORIZONTAL) {
-                    currentCol++;
-                } else {
-                    currentRow++;
-                }
-            }
-        }
-
-        return formedWords;
-    }
-
-    private int calculateMoveScore(Move move) {
-        // This is a simplified score calculation
-        // In a real implementation, you would need to account for premium squares
-
-        int score = 0;
-        for (String word : move.getFormedWords()) {
-            // Basic scoring: 1 point per letter
-            score += word.length();
-        }
-
-        // Bonus for using all tiles (Bingo)
-        if (move.getTiles().size() == Rack.RACK_SIZE) {
-            score += ScrabbleConstants.BINGO_BONUS;
-        }
-
-        return score;
-    }
-
-    public boolean validateWords(Move move) {
-        Board board = game.getBoard();
-        Dictionary dictionary = game.getDictionary();
-
-        List<String> formedWords = new ArrayList<>();
-        Map<String, List<Square>> wordSquaresMap = new HashMap<>();
-
-        int row = move.getStartRow();
-        int col = move.getStartCol();
-        Move.Direction direction = move.getDirection();
-
-        Board tempBoard = new Board();
-
-        // Copy the current board state
         for (int r = 0; r < Board.SIZE; r++) {
             for (int c = 0; c < Board.SIZE; c++) {
                 Square square = board.getSquare(r, c);
@@ -797,108 +532,249 @@ public class GameController {
         }
 
         List<Point> newTilePositions = new ArrayList<>();
-
-        // Place the new tiles on the temporary board
-        if (direction == Move.Direction.HORIZONTAL) {
-            int c = col;
-            for (Tile tile : move.getTiles()) {
-                // Skip positions that already have tiles
-                while (c < Board.SIZE && tempBoard.getSquare(row, c).hasTile()) {
-                    c++;
-                }
-
-                if (c < Board.SIZE) {
-                    tempBoard.placeTile(row, c, tile);
-                    newTilePositions.add(new Point(row, c));
-                    c++;
+        int currentRow = row;
+        int currentCol = col;
+        for (Tile tile : move.getTiles()) {
+            while (currentRow < Board.SIZE && currentCol < Board.SIZE &&
+                    tempBoard.getSquare(currentRow, currentCol).hasTile()) {
+                if (move.getDirection() == Move.Direction.HORIZONTAL) {
+                    currentCol++;
+                } else {
+                    currentRow++;
                 }
             }
-        } else {
-            int r = row;
-            for (Tile tile : move.getTiles()) {
-                // Skip positions that already have tiles
-                while (r < Board.SIZE && tempBoard.getSquare(r, col).hasTile()) {
-                    r++;
-                }
-
-                if (r < Board.SIZE) {
-                    tempBoard.placeTile(r, col, tile);
-                    newTilePositions.add(new Point(r, col));
-                    r++;
-                }
+            if (currentRow >= Board.SIZE || currentCol >= Board.SIZE) {
+                break;
             }
-        }
-
-        // Check the main word formed in the direction of placement
-        List<Square> mainWord;
-        if (direction == Move.Direction.HORIZONTAL) {
-            mainWord = tempBoard.getHorizontalWord(row, col);
-        } else {
-            mainWord = tempBoard.getVerticalWord(row, col);
-        }
-
-        // The main word must be at least 2 letters long
-        if (mainWord.isEmpty() || mainWord.size() < 2) {
-            System.out.println("Invalid move: Main word is too short");
-            return false;
-        }
-
-        String mainWordStr = Board.getWordString(mainWord);
-        if (!dictionary.isValidWord(mainWordStr)) {
-            System.out.println("Invalid move: Main word '" + mainWordStr + "' is not in dictionary");
-            return false;
-        }
-
-        formedWords.add(mainWordStr);
-        wordSquaresMap.put(mainWordStr, mainWord);
-
-        // Check any crossing words formed by each new tile
-        for (Point p : newTilePositions) {
-            List<Square> crossWord;
-
-            // Check for a crossing word perpendicular to the direction of play
-            if (direction == Move.Direction.HORIZONTAL) {
-                crossWord = tempBoard.getVerticalWord(p.x, p.y);
+            tempBoard.placeTile(currentRow, currentCol, tile);
+            newTilePositions.add(new Point(currentRow, currentCol));
+            if (move.getDirection() == Move.Direction.HORIZONTAL) {
+                currentCol++;
             } else {
-                crossWord = tempBoard.getHorizontalWord(p.x, p.y);
-            }
-
-            // Only validate crossing words that are at least 2 letters long
-            if (crossWord.size() > 1) {
-                String crossWordStr = Board.getWordString(crossWord);
-
-                if (!dictionary.isValidWord(crossWordStr)) {
-                    System.out.println("Invalid move: Crossing word '" + crossWordStr + "' is not in dictionary");
-                    return false;
-                }
-
-                formedWords.add(crossWordStr);
-                wordSquaresMap.put(crossWordStr, crossWord);
+                currentRow++;
             }
         }
 
-        // If we got here, all words are valid
+        String mainWord = "";
+        if (move.getDirection() == Move.Direction.HORIZONTAL) {
+            List<Square> wordSquares = tempBoard.getHorizontalWord(row, col);
+            if (!wordSquares.isEmpty()) {
+                mainWord = Board.getWordString(wordSquares);
+                formedWords.add(mainWord);
+            }
+        } else {
+            List<Square> wordSquares = tempBoard.getVerticalWord(row, col);
+            if (!wordSquares.isEmpty()) {
+                mainWord = Board.getWordString(wordSquares);
+                formedWords.add(mainWord);
+            }
+        }
+        System.out.println("Main word formed: " + mainWord);
+
+        for (Point p : newTilePositions) {
+            List<Square> crossingWord;
+            if (move.getDirection() == Move.Direction.HORIZONTAL) {
+                crossingWord = tempBoard.getVerticalWord(p.x, p.y);
+            } else {
+                crossingWord = tempBoard.getHorizontalWord(p.x, p.y);
+            }
+            if (crossingWord.size() >= 2) {
+                String crossWord = Board.getWordString(crossingWord);
+                if (!crossWord.equals(mainWord)) {
+                    System.out.println("Crossing word formed: " + crossWord);
+                    formedWords.add(crossWord);
+                }
+            }
+        }
+        return formedWords;
+    }
+
+    public boolean validateWords(Move move) {
+        Board board = game.getBoard();
+        Dictionary dictionary = game.getDictionary();
+
+        List<String> formedWords = calculateFormedWords(move);
+        if (formedWords.isEmpty()) {
+            System.out.println("Invalid move: No valid words formed");
+            return false;
+        }
+
+        Map<String, List<Square>> wordSquaresMap = new HashMap<>();
+        Board tempBoard = new Board();
+        for (int r = 0; r < Board.SIZE; r++) {
+            for (int c = 0; c < Board.SIZE; c++) {
+                Square square = board.getSquare(r, c);
+                if (square.hasTile()) {
+                    tempBoard.placeTile(r, c, square.getTile());
+                }
+            }
+        }
+        int currentRow = move.getStartRow();
+        int currentCol = move.getStartCol();
+        for (Tile tile : move.getTiles()) {
+            while (currentRow < Board.SIZE && currentCol < Board.SIZE &&
+                    tempBoard.getSquare(currentRow, currentCol).hasTile()) {
+                if (move.getDirection() == Move.Direction.HORIZONTAL) {
+                    currentCol++;
+                } else {
+                    currentRow++;
+                }
+            }
+            if (currentRow < Board.SIZE && currentCol < Board.SIZE) {
+                tempBoard.placeTile(currentRow, currentCol, tile);
+                if (move.getDirection() == Move.Direction.HORIZONTAL) {
+                    currentCol++;
+                } else {
+                    currentRow++;
+                }
+            }
+        }
+        for (String word : formedWords) {
+            List<Square> wordSquares = findWordSquares(tempBoard, word);
+            if (wordSquares.isEmpty()) {
+                System.out.println("Error: Could not find squares for word: " + word);
+                return false;
+            }
+            if (!dictionary.isValidWord(word)) {
+                System.out.println("Invalid move: Word '" + word + "' is not in dictionary");
+                return false;
+            }
+            wordSquaresMap.put(word, wordSquares);
+        }
         move.setFormedWords(formedWords);
         move.setMetadata("wordSquares", wordSquaresMap);
-
-        // Calculate score
         int score = calculateMoveScore(move, tempBoard, wordSquaresMap);
         move.setScore(score);
-
         return true;
+    }
+
+    private List<Square> findWordSquares(Board tempBoard, String word) {
+        for (int r = 0; r < Board.SIZE; r++) {
+            for (int c = 0; c < Board.SIZE; c++) {
+                List<Square> horizontal = tempBoard.getHorizontalWord(r, c);
+                if (!horizontal.isEmpty() && Board.getWordString(horizontal).equals(word)) {
+                    return horizontal;
+                }
+            }
+        }
+        for (int r = 0; r < Board.SIZE; r++) {
+            for (int c = 0; c < Board.SIZE; c++) {
+                List<Square> vertical = tempBoard.getVerticalWord(r, c);
+                if (!vertical.isEmpty() && Board.getWordString(vertical).equals(word)) {
+                    return vertical;
+                }
+            }
+        }
+        return new ArrayList<>();
+    }
+
+    public boolean commitPlacement() {
+        if (temporaryPlacements.isEmpty()) {
+            return false;
+        }
+
+        Move.Direction direction = determineDirection();
+        if (temporaryPlacements.size() == 1) {
+            Point p = temporaryPlacements.keySet().iterator().next();
+            int row = p.x;
+            int col = p.y;
+            Board board = game.getBoard();
+            Board tempBoard = new Board();
+            for (int r = 0; r < Board.SIZE; r++) {
+                for (int c = 0; c < Board.SIZE; c++) {
+                    if (board.getSquare(r, c).hasTile()) {
+                        tempBoard.placeTile(r, c, board.getSquare(r, c).getTile());
+                    }
+                }
+            }
+            Tile placedTile = temporaryPlacements.get(p);
+            tempBoard.placeTile(row, col, placedTile);
+            List<Square> horizontalWord = tempBoard.getHorizontalWord(row, col);
+            List<Square> verticalWord = tempBoard.getVerticalWord(row, col);
+            String horizontalWordStr = horizontalWord.size() >= 2 ? Board.getWordString(horizontalWord) : "";
+            String verticalWordStr = verticalWord.size() >= 2 ? Board.getWordString(verticalWord) : "";
+            boolean formingHorizontalWord = horizontalWord.size() >= 2 &&
+                    game.getDictionary().isValidWord(horizontalWordStr);
+            boolean formingVerticalWord = verticalWord.size() >= 2 &&
+                    game.getDictionary().isValidWord(verticalWordStr);
+            if (formingHorizontalWord && !formingVerticalWord) {
+                direction = Move.Direction.HORIZONTAL;
+            } else if (formingVerticalWord && !formingHorizontalWord) {
+                direction = Move.Direction.VERTICAL;
+            } else if (formingHorizontalWord && formingVerticalWord) {
+                direction = horizontalWord.size() >= verticalWord.size() ?
+                        Move.Direction.HORIZONTAL : Move.Direction.VERTICAL;
+            } else {
+                return false;
+            }
+        }
+        if (direction == null) {
+            direction = Move.Direction.HORIZONTAL;
+        }
+        int startRow = Integer.MAX_VALUE;
+        int startCol = Integer.MAX_VALUE;
+        for (Point p : temporaryPlacements.keySet()) {
+            startRow = Math.min(startRow, p.x);
+            startCol = Math.min(startCol, p.y);
+        }
+        if (game.getBoard().isEmpty()) {
+            boolean includesCenter = false;
+            for (Point p : temporaryPlacements.keySet()) {
+                if (p.x == ScrabbleConstants.CENTER_SQUARE && p.y == ScrabbleConstants.CENTER_SQUARE) {
+                    includesCenter = true;
+                    break;
+                }
+            }
+            if (!includesCenter) {
+                return false;
+            }
+        }
+        Move placeMove = Move.createPlaceMove(game.getCurrentPlayer(), startRow, startCol, direction);
+        List<Tile> tilesToPlace = new ArrayList<>();
+        if (direction == Move.Direction.HORIZONTAL) {
+            Map<Integer, Tile> colToTile = new TreeMap<>();
+            for (Map.Entry<Point, Tile> entry : temporaryPlacements.entrySet()) {
+                Point p = entry.getKey();
+                if (p.x == startRow) {
+                    colToTile.put(p.y, entry.getValue());
+                }
+            }
+            tilesToPlace.addAll(colToTile.values());
+        } else {
+            Map<Integer, Tile> rowToTile = new TreeMap<>();
+            for (Map.Entry<Point, Tile> entry : temporaryPlacements.entrySet()) {
+                Point p = entry.getKey();
+                if (p.y == startCol) {
+                    rowToTile.put(p.x, entry.getValue());
+                }
+            }
+            tilesToPlace.addAll(rowToTile.values());
+        }
+        placeMove.addTiles(tilesToPlace);
+        List<String> formedWords = calculateFormedWords(placeMove);
+        if (formedWords.isEmpty()) {
+            return false;
+        }
+        placeMove.setFormedWords(formedWords);
+        if (!validateWords(placeMove)) {
+            return false;
+        }
+        boolean success = makeMove(placeMove);
+        if (success) {
+            temporaryPlacements.clear();
+            temporaryIndices.clear();
+        }
+        return success;
     }
 
     private int calculateWordScore(List<Square> wordSquares, boolean isNewMove) {
         int wordScore = 0;
         int wordMultiplier = 1;
-
         StringBuilder scoreCalc = new StringBuilder("Word score calculation: ");
-
         for (Square square : wordSquares) {
             Tile tile = square.getTile();
             int letterValue = tile.getValue();
             int effectiveValue = letterValue;
-
             if (isNewMove && !square.isSquareTypeUsed()) {
                 if (square.getSquareType() == Square.SquareType.DOUBLE_LETTER) {
                     effectiveValue = letterValue * 2;
@@ -909,7 +785,6 @@ public class GameController {
                 } else {
                     scoreCalc.append(tile.getLetter()).append("(").append(letterValue).append(") + ");
                 }
-
                 if (square.getSquareType() == Square.SquareType.DOUBLE_WORD ||
                         square.getSquareType() == Square.SquareType.CENTER) {
                     wordMultiplier *= 2;
@@ -919,12 +794,9 @@ public class GameController {
             } else {
                 scoreCalc.append(tile.getLetter()).append("(").append(letterValue).append(") + ");
             }
-
             wordScore += effectiveValue;
         }
-
         int finalWordScore = wordScore * wordMultiplier;
-
         if (wordMultiplier > 1) {
             scoreCalc.append(" = ").append(wordScore).append(" × ").append(wordMultiplier)
                     .append(" = ").append(finalWordScore);
@@ -934,7 +806,6 @@ public class GameController {
             }
             scoreCalc.append(" = ").append(finalWordScore);
         }
-
         System.out.println(scoreCalc.toString());
         return finalWordScore;
     }
@@ -942,9 +813,7 @@ public class GameController {
     private int calculateMoveScore(Move move, Board tempBoard, Map<String, List<Square>> wordSquaresMap) {
         int totalScore = 0;
         boolean usedAllTiles = move.getTiles().size() == 7;
-
         System.out.println("Calculating score for move: " + move);
-
         for (String word : move.getFormedWords()) {
             List<Square> wordSquares = wordSquaresMap.get(word);
             if (wordSquares != null) {
@@ -953,56 +822,39 @@ public class GameController {
                 totalScore += wordScore;
             }
         }
-
         if (usedAllTiles) {
             System.out.println("Bingo bonus: " + ScrabbleConstants.BINGO_BONUS);
             totalScore += ScrabbleConstants.BINGO_BONUS;
         }
-
         System.out.println("Total move score: " + totalScore);
         return totalScore;
     }
 
-    public boolean selectTileFromRack(int index) {
+    public void selectTileFromRack(int index) {
         if (!gameInProgress) {
-            return false;
+            return;
         }
-
         Player currentPlayer = game.getCurrentPlayer();
         Rack rack = currentPlayer.getRack();
-
         if (index < 0 || index >= rack.size()) {
-            return false;
+            return;
         }
-
-        // Get the tile at the specified index
         Tile tile = rack.getTile(index);
-
-        // Check if this specific index is already selected
         if (selectedPositions.contains(index)) {
-            // It's selected, so deselect it
-            selectedTiles.remove(tile);  // Remove the tile
-            selectedPositions.remove(Integer.valueOf(index));  // Remove the position
+            selectedTiles.remove(tile);
+            selectedPositions.remove(Integer.valueOf(index));
             System.out.println("Deselected tile at index " + index + ": " + tile.getLetter());
         } else {
-            // It's not selected, so select it
             selectedTiles.add(tile);
             selectedPositions.add(index);
             System.out.println("Selected tile at index " + index + ": " + tile.getLetter());
         }
-
-        // Notify rack update
         updateRack();
-
-        return true;
     }
 
     public void cancelPlacements() {
-        // Clear temporary placements
         temporaryPlacements.clear();
         temporaryIndices.clear();
-
-        // Update board view
         updateBoard();
     }
 
